...
    <string name="visited_locations">Visited locations:</string>
    <string name="total_time">Total route time:</string>
    <string name="coupons_collected">Coupons collected:</string>
    <string name="coupons">Coupons</string>
    <string name="start_route">Start Route</string>
    <string name="activate_question">Are you sure you want to activate this coupon?</string>
    <string name="activate">activate</string>
    <string name="done">Done</string>
    <string name="cancel">cancel</string>
    <string name="total_distance_route">The total distance of the route is:</string>
    <string name="route_stop_toast">Route stopped!</string>
    <string name="Dutch">Dutch</string>
    <string name="English">English</string>
    <string name="Chinese">Chinese</string>
...
