<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryColour"
    android:id="@+id/settingFragment"
    tools:context=".fragments.SettingsFragment"
    android:theme="@style/Theme.Switches">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/settings_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_back_button_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        android:textColor="@color/secondaryColour"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="0dp"
        android:layout_height="74dp"
        app:layout_constraintTop_toTopOf="@id/name_box"
        app:layout_constraintBottom_toBottomOf="@id/name_box"
        app:layout_constraintLeft_toLeftOf="@id/name_box"
        app:layout_constraintRight_toRightOf="@id/name_box"
        android:background="@color/secondaryColour"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@id/Box2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:background="@color/primaryColour"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/secondaryColour"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/Balk"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/Balk"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/secondaryColour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Spinner
            android:id="@+id/dropdown_menu_Settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Balk"
            app:layout_constraintTop_toTopOf="parent"
            android:tooltipText="Taal"
            android:spinnerMode="dropdown"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="74dp"
        app:layout_constraintTop_toTopOf="@id/Box2"
        app:layout_constraintBottom_toBottomOf="@id/Box2"
        app:layout_constraintLeft_toLeftOf="@id/Box2"
        app:layout_constraintRight_toRightOf="@id/Box2"
        android:background="@color/secondaryColour"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Box2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/primaryColour"
        app:layout_constraintBottom_toTopOf="@id/Box3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_box"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imperial_system"
            android:textColor="@color/secondaryColour"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/Balk2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/Balk2"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/secondaryColour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/imperial_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Balk2"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="74dp"
        app:layout_constraintTop_toTopOf="@id/Box3"
        app:layout_constraintBottom_toBottomOf="@id/Box3"
        app:layout_constraintLeft_toLeftOf="@id/Box3"
        app:layout_constraintRight_toRightOf="@id/Box3"
        android:background="@color/secondaryColour"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Box3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/primaryColour"
        app:layout_constraintBottom_toTopOf="@id/Box4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Box2"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_65_mode"
            android:textColor="@color/secondaryColour"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/Balk3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/Balk3"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/secondaryColour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/font_changer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Balk3"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="74dp"
        app:layout_constraintTop_toTopOf="@id/Box4"
        app:layout_constraintBottom_toBottomOf="@id/Box4"
        app:layout_constraintLeft_toLeftOf="@id/Box4"
        app:layout_constraintRight_toRightOf="@id/Box4"
        android:background="@color/secondaryColour"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Box4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Box3"
        android:background="@color/primaryColour"
        android:layout_marginHorizontal="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colorblind"
            android:textColor="@color/secondaryColour"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/Balk4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/Balk4"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/secondaryColour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/colourblindSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Balk4"
            app:layout_constraintTop_toTopOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>